--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cookie-session": "^2.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "joi": "^17.13.1",
     "mongoose": "^8.4.0"
   },
   "scripts": {
